[package]
name = "module-dependency-graph-creator"
version = "0.1.0"
edition = "2024"

[dependencies]
petgraph = "*"
walkdir = "2"
regex = "1.11.1"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }